[package]
name = "rocket_contrib"
version = "0.2.2"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "Community contributed libraries for the Rocket web framework."
documentation = "https://api.rocket.rs/rocket_contrib/"
homepage = "https://rocket.rs"
repository = "https://github.com/SergioBenitez/Rocket"
readme = "../README.md"
keywords = ["rocket", "web", "framework", "contrib", "contributed"]
license = "MIT/Apache-2.0"

[features]
default = ["json"]
json = ["serde", "serde_json"]
tera_templates = ["tera", "templates"]
handlebars_templates = ["handlebars", "templates"]
database = []
diesel_pg = ["database", "diesel/postgres", "r2d2", "r2d2-diesel"]
diesel_sqlite = ["database", "diesel/sqlite", "r2d2", "r2d2-diesel"]
postgres_db = ["database", "postgres", "r2d2", "r2d2_postgres"]
redis_db = ["database", "redis", "r2d2", "r2d2_redis"]
mysql_db = ["database", "mysql", "r2d2", "r2d2_mysql"]

# Internal use only.
templates = ["serde", "serde_json", "lazy_static_macro", "glob"]
lazy_static_macro = ["lazy_static"]

[dependencies]
rocket = { version = "0.2.2", path = "../lib/" }
log = "^0.3"

# Database dependencies
r2d2 = { version = "^0.7.1", optional = true }

# Diesel dependencies
diesel = { version = "^0.10", optional = true }
r2d2-diesel = { version = "^0.10.0", optional = true }

# Postgres dependencies
postgres = { version = "^0.13.6", optional = true }
r2d2_postgres = { version = "^0.11.1", optional = true }

# Redis dependencies
redis = { version = "^0.8", optional = true }
r2d2_redis = { version = "^0.5.1", optional = true}

# MySQL dependencies
mysql = { version = "^9.0.1", optional = true }
r2d2_mysql = { version = "^8.0", optional = true }

# UUID dependencies.
uuid = { version = "^0.4", optional = true }

# JSON and templating dependencies.
serde = { version = "^0.9", optional = true }
serde_json = { version = "^0.9.3", optional = true }

# Templating dependencies only.
handlebars = { version = "^0.25", optional = true, features = ["serde_type"] }
glob = { version = "^0.2", optional = true }
lazy_static = { version = "^0.2", optional = true }
tera = { version = "^0.7", optional = true }
