[package]
name = "rocket_dyn_templates-community"
version = "0.1.0"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "Dynamic templating engine integration for Rocket. (Community Fork)"
documentation = "https://api.rocket.rs/master/rocket_dyn_templates/"
homepage = "https://rocket.rs"
repository = "https://github.com/rwf2/Rocket/tree/master/contrib/dyn_templates"
readme = "README.md"
keywords = ["rocket", "framework", "templates", "templating", "engine"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70"

[lints]
workspace = true

[features]
tera = ["dep:tera"]
handlebars = ["dep:handlebars"]
minijinja = ["dep:minijinja"]

[dependencies]
walkdir = "2.4"
notify = "7"
normpath = "1"

# Pinned for MSRV, 1.20.1 requires 1.85
tera = { version = "=1.20.0", optional = true }

handlebars = { version = "6.0", optional = true }

[dependencies.minijinja]
version = "2.0.1"
optional = true
features = ["loader", "speedups", "json", "urlencode"]

[dependencies.rocket]
package = "rocket-community"
version = "0.6.0-rc1"
path = "../../core/lib"
default-features = false

[dev-dependencies]
pretty_assertions = "1.4"

[package.metadata.docs.rs]
all-features = true
