[package]
name = "rocket_contrib"
version = "0.4.0-dev"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "Community contributed libraries for the Rocket web framework."
documentation = "https://api.rocket.rs/rocket_contrib/"
homepage = "https://rocket.rs"
repository = "https://github.com/SergioBenitez/Rocket"
readme = "../../README.md"
keywords = ["rocket", "web", "framework", "contrib", "contributed"]
license = "MIT/Apache-2.0"

[features]
default = ["json"]
json = ["serde", "serde_json"]
msgpack = ["serde", "rmp-serde"]
tera_templates = ["tera", "templates"]
handlebars_templates = ["handlebars", "templates"]
compression = ["brotli_compression", "gzip_compression"]
brotli_compression = ["brotli"]
gzip_compression = ["flate2"]

# Internal use only.
templates = ["serde", "serde_json", "glob"]

[dependencies]
rocket = { version = "0.4.0-dev", path = "../../core/lib/" }
log = "0.4"

# UUID dependencies.
uuid = { version = ">= 0.5, <= 0.6", optional = true }

# Serialization and templating dependencies.
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
rmp-serde = { version = "^0.13", optional = true }

# Templating dependencies only.
handlebars = { version = "0.32", optional = true }
glob = { version = "^0.2", optional = true }
tera = { version = "0.11", optional = true }

# Compression dependencies
brotli = { version = "1.2.0", optional = true }
flate2 = { version = "1.0.1", optional = true }

[dev-dependencies]
rocket_codegen = { path = "../codegen" }

[package.metadata.docs.rs]
all-features = true
