[package]
name = "cookies"
version = "0.0.0"
workspace = "../"
edition = "2021"
publish = false

[dependencies]
rocket = { package = "rocket-community", path = "../../core/lib", features = ["secrets"] }

[dependencies.rocket_dyn_templates]
package = "rocket_dyn_templates-community"
path = "../../contrib/dyn_templates"
features = ["handlebars"]
