[package]
name = "database"
version = "0.0.1"
workspace = "../../"

[dependencies]
rocket = { path = "../../lib" }
rocket_codegen = { path = "../../codegen" }
serde = "^0.9"
serde_json = "^0.9"
serde_derive = "^0.9"
postgres = "^0.13.6"

[dependencies.rocket_contrib]
path = "../../contrib"
default-features = false
features = ["json", "postgres_db", "tera_templates"]

[dev-dependencies]
rocket = { path = "../../lib", features = ["testing"] }