[package]
name = "templating"
version = "0.0.0"
workspace = "../"
edition = "2021"
publish = false

[dependencies]
rocket = { package = "rocket-community", path = "../../core/lib" }

# in your application, you should enable only the template engine(s) used
[dependencies.rocket_dyn_templates]
package = "rocket_dyn_templates-community"
path = "../../contrib/dyn_templates"
features = ["tera", "handlebars", "minijinja"]
